Changes for templates:

  * The memcached stats command hung because it lacked "quit" (issue 65).
  * The COUNTER data type caused spikes; switched to DERIVE instead (issue41).
  * LOCK WAIT in an InnoDB transaction could cause an error (issue 91).
  * The cache file name didn't include the MySQL port (issue 82).
  * Added the -q option to the SSH command to quell missing homedir warnings.
  * The --port option to the MySQL templates could not be null.
  * The log_bytes_flushed and log_bytes_written were renamed (issue 81).

2009-10-25: version 1.1.4

  * Changed SSH options so host keys are accepted automatically (issue 68).
  * Parsing of the pending_ibuf_aio_reads property was broken.
  * Parsing of the pending_aio_log_ios property was broken.
  * Parsing of the pending_aio_sync_ios property was broken.
  * Added a debugging log for ss_get_mysql_stats.php (issue 54).
  * Added the --lint_check option to make-template.pl (issue 80).
  * Removed the use of GET_LOCK() and changed to flock() instead (issue 78).
  * The template and script version is now recorded in a GPRINT (issue 79).
  * Restored unflushed_log, which was accidentally deleted in 1.1.3.
  * Added the InnoDB Internal Hash Memory Usage graph (issue 75).
  * Added the InnoDB Checkpoint Age graph (issue 73).
  * Added the InnoDB Insert Buffer Usage graph (issue 74).
  * Added the InnoDB Active/Locked Transactions graph.
  * Added the InnoDB Memory Allocation graph.
  * Added the InnoDB Adaptive Hash Index graph.
  * Added the InnoDB Tables In Use graph (issue 32).
  * Added the InnoDB Current Lock Waits graph.
  * Added the InnoDB Lock Structures graph (issue 32).

2009-10-24: version 1.1.3

  * This is a bug-fix release only, and contains no template changes.
  * To upgrade from the previous release, upgrade ss_get_mysql_stats.php.
  * MySQL 5.1 broke backwards compatibility with table_cache (issue 63).
  * Added a version number to the script (partial fix for issue 79).